--- a/miniprogram/pages/detail/detail.wxml
+++ b/miniprogram/pages/detail/detail.wxml
@@ -1,13 +1,10 @@
-<!--pages/detail/detail.wxml-->
-
-
 <view class="header_buttonGroup">
   <van-button icon="revoke" round plain type="primary" size="small" bind:click="back">返回</van-button>
 
   <van-button icon="delete-o" round plain type="danger" size="small" wx:if="{{!shouldDisabled}}" bind:click="del">删除</van-button>
 </view>
 
-<van-uploader multiple accept="image" file-list="{{ fileList }}" bind:after-read="afterRead" bind:delete="delete" sizeType="['compressed']" max-count="4" disabled="{shouldDisabled}" />
+<van-uploader multiple accept="image" file-list="{{ fileList }}" bind:after-read="afterRead" bind:delete="delete" sizeType="['compressed']" max-count="4" disabled="{{shouldDisabled}}" />
 
 <van-cell-group size="large">
   <!-- 名称 -->
@@ -35,14 +32,16 @@
   <van-cell title="是否公开" icon="info-o" label="公开以后让其他人看到">
     <van-switch checked="{{ isPublic }}" bind:change="changePublicSwitch" disabled="{{shouldDisabled}}" size="24px" active-color="#07c160" />
   </van-cell>
+  <van-cell title="距离当前位置{{distance}}米" icon="aim">
+     
+  </van-cell>
+
 </van-cell-group>
 
 <van-button type="primary" block bind:click="handleToUpdateOrCreate" class="mt-20" disabled="{{shouldDisabled}}">确定</van-button>
 
 
-
-<van-calendar show="{{ showTimePicker }}" bind:close="closeTimePicker" bind:confirm="onConfirm" />
-
 <!-- 日历面板 -->
 <van-calendar show="{{ showTimePicker }}" bind:close="closeTimePicker" bind:confirm="confirmToChooseDate" />
+
 <van-dialog id="van-dialog" />
