--- a/miniprogram/pages/list/list.wxml
+++ b/miniprogram/pages/list/list.wxml
@@ -9,7 +9,7 @@
 
 
 <block wx:if="{{list.length}}">
-  <van-skeleton title row="2" loading="{{ loading }}">
+  
     <van-cell-group>
       <van-swipe-cell right-width="{{ 80 }}" wx:for="{{list}}" wx:key="_id">
         <van-cell title-class="overflowEllipsis" label-class="overflowEllipsis" value-class="valueClass" custom-class="customClass" title="{{item.restaurantName}}" label="{{item.restaurantAddress}}" icon="location-o" data-id="{{item._id}}" bind:click="clickCell">
@@ -19,7 +19,7 @@
             <van-tag type="success" wx:if="{{item.isPublic}}">公开</van-tag>
             <van-tag type="danger" wx:else>私有</van-tag>
             <view bind:tap="goToLocation" data-item="{{item}}" catchtap>
-              到这去
+                距离:{{item.distance}}千米,到这去  
               <van-icon name="guide-o" />
             </view>
           </view>
@@ -31,7 +31,7 @@
         </view>
       </van-swipe-cell>
     </van-cell-group>
-  </van-skeleton>
+  
 </block>
 
 <van-empty wx:else image="search" description="暂无内容">
