--- a/miniprogram/pages/detail/detail.wxml
+++ b/miniprogram/pages/detail/detail.wxml
@@ -1,7 +1,8 @@
 <view class="header_buttonGroup">
   <van-button icon="revoke" round plain type="primary" size="small" bind:click="back">返回</van-button>
 
-  <van-button icon="delete-o" round plain type="danger" size="small" wx:if="{{!shouldDisabled}}" bind:click="del">删除</van-button>
+  <van-button icon="delete-o" round plain type="danger" size="small" 
+  wx:if="{{!shouldDisabled && type !== 'add'}}" bind:click="del">删除</van-button>
 </view>
 
 <van-uploader multiple accept="image" file-list="{{ fileList }}" bind:after-read="afterRead" bind:delete="delete" sizeType="['compressed']" max-count="4" disabled="{{shouldDisabled}}" />
@@ -33,7 +34,14 @@
     <van-switch checked="{{ isPublic }}" bind:change="changePublicSwitch" disabled="{{shouldDisabled}}" size="24px" active-color="#07c160" />
   </van-cell>
   <van-cell title="距离当前位置{{distance}}千米" icon="aim">
-     
+    <view bind:tap="goToLocation"
+     data-lng="{{longitude}}"
+     data-lat="{{latitude}}"
+     data-address="{{restaurantAddress}}"
+     data-name="{{restaurantName}}"
+     >
+     <van-icon name="guide-o" />
+      到这去</view> 
   </van-cell>
 
 </van-cell-group>
